cabal-version: 2.2

name: riakc
version: 0.1.0
build-type: Simple

executable riakc-new
  build-depends:
      base
    , bytestring
    , data-default-class
    , generic-lens
    , lens
    , optparse-applicative
    , network
    , riak2
    , riak2-core
    , split
    , text

  default-extensions:
    DataKinds
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    NamedFieldPuns
    ScopedTypeVariables
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  main-is:
    Main.hs

  -- TODO when visibility public works, switch to managed client
  mixins:
    riak2 requires
      (Riak.Interface.Signature as Riak.Interface.Impl.Socket)
