cabal-version: 2.2

name: riakc
version: 0.1.0
build-type: Simple

executable riakc
  build-depends:
      base
    , base64-bytestring
    , bytestring
    , data-default-class
    , foldl
    , generic-lens
    , ip
    , lens
    , optparse-applicative
    , riak2
    , riak2-handle-impl-exclusive
    , riak2-handle-impl-managed
    , split
    , text
    , unordered-containers

  default-extensions:
    DataKinds
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    NamedFieldPuns
    ScopedTypeVariables
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  main-is:
    Main.hs

  mixins:
    riak2 requires
      (Riak.Handle.Signature as Riak.Handle.Impl.Managed),
    riak2-handle-impl-managed requires
      (Riak.Handle.Signature as Riak.Handle.Impl.Exclusive)
