cabal-version: 2.2

name: riakc
version: 0.1.0
build-type: Simple

executable riakc
  build-depends:
    base,
    base64-bytestring,
    bytestring,
    data-default-class,
    foldl,
    generic-lens,
    ip,
    lens,
    optparse-applicative,
    riak2,
    sockets,
    split,
    text,
    time,
    unordered-containers,

  default-extensions:
    DataKinds
    DuplicateRecordFields
    GADTs
    LambdaCase
    OverloadedStrings
    NamedFieldPuns
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -threaded
    -O

  hs-source-dirs:
    src

  main-is:
    Main.hs
